# libsocket

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  appveyor.yml  codecov.yml
include/xio/: config.hpp  socket.hpp
include/xio/base/: basic_address.hpp  basic_option.hpp  basic_socket.hpp  ev_base.hpp  ev_event.hpp  ev_handle.hpp  ev_timer.hpp
include/xio/core/: ioctl.hpp  reactor.hpp  startup.hpp
include/xio/inet/: inet_adapter.hpp  inet_address.hpp  inet_resolver.hpp
include/xio/ip/: ip_address.hpp  ip_option.hpp  ip_version.hpp
lib/ifaddrs/: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/base/: basic_option.cpp  basic_socket.cpp  ev_base.cpp  ev_event.linux.cpp  ev_event.unix.cpp  ev_event.win.cpp  ev_handle.cpp  ev_timer.cpp
src/core/: ioctl.unix.cpp  ioctl.win.cpp  reactor.cpp  reactor.linux.cpp  reactor.unix.cpp  reactor.win.cpp  startup.unix.cpp  startup.win.cpp
src/inet/: inet_adapter.unix.cpp  inet_adapter.win.cpp  inet_address.cpp  inet_resolver.cpp
src/ip/: ip_address.cpp  ip_option.cpp  ip_version.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/base/: basic_option.cpp  basic_socket.cpp
test/src/core/: reactor_echo.cpp  reactor_timer.cpp
test/src/inet/: inet_adapter.cpp  inet_address.cpp  inet_resolver.cpp
test/src/ip/: ip_address.cpp  ip_option.cpp
